feat: (BE)ai 추천기능